tweaked shadows and transitions

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					type="text"
 					name="title"
 					id="book-title"
-					placeholder="Title"
+					placeholder="Title*"
 					autocomplete="off"
 					required
 				/>
@@ -45,7 +45,7 @@
 					type="text"
 					name="author"
 					id="book-author"
-					placeholder="Author"
+					placeholder="Author*"
 					autocomplete="off"
 					required
 				/>
@@ -53,7 +53,7 @@
 					type="number"
 					name="pages"
 					id="book-pages"
-					placeholder="Number of Pages"
+					placeholder="Number of Pages*"
 					min="0"
 					required
 				/>
@@ -84,7 +84,7 @@
 		<div class="modal enter-name-modal display-none">
 			<form>
 				<div class="head-modal">
-					<h2>Enter Your Name</h2>
+					<h2>What is your name?</h2>
 					<div class="button danger-button enter-name-cancel-button">
 						<i class="fas fa-times"></i>
 					</div>
@@ -93,7 +93,7 @@
 					type="text"
 					name="name"
 					id="username"
-					placeholder="Enter your name"
+					placeholder="Name*"
 					autocomplete="off"
 					required
 				/>
