some changes to default card view when url not provided

--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
 				<p class="completed-books">Finished reading: <span>1</span></p>
 				<p class="completed-books">Unfinished: <span>1</span></p>
 			</div>
+			<label class="dark-mode-check">
+				Dark Mode:
+				<input
+					type="checkbox"
+					class="toggle-darkmode"
+					name="completed"
+					id="completed-check"
+				/>
+				<div class="slider-switch"></div>
+			</label>
 		</header>
 		<div class="shelf">
 			<div class="book-card add-new-book" title="Add a Book">+</div>
