made some bug fixes and changed the default cover

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					Completed:
 					<input
 						type="checkbox"
-						class="checkbox"
+						class="completed-checkbox"
 						name="completed"
 						id="completed-check"
 					/>
