made a modal overlay layer so that i don't have to apply backdrop blur on parent element. fixes unwanted blurring of the modal form

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 			<div class="book-card add-new-book" title="Add a Book">+</div>
 		</div>
 		<div class="modal add-book-modal display-none">
+			<div class="modal-overlay"></div>
 			<form>
 				<div class="head-modal">
 					<h2>Add Book to the Shelf</h2>
@@ -92,6 +93,7 @@
 			</form>
 		</div>
 		<div class="modal enter-name-modal display-none">
+			<div class="modal-overlay"></div>
 			<form>
 				<div class="head-modal">
 					<h2>What is your name?</h2>
