instead of updating the whole shelf,  edited the logic such that marking as read will now change only the finished on property and not update the whole page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			</h2>
 			<div class="shelf-info">
 				<p class="total-books">Total books: <span>10</span></p>
-				<p class="completed-books">Finished reading: <span>1</span></p>
+				<p class="completed-books">Finished: <span>1</span></p>
 				<p class="completed-books">Unfinished: <span>1</span></p>
 			</div>
 			<label class="dark-mode-check">
