made changes to design and some logic

--- a/index.html
+++ b/index.html
@@ -21,16 +21,6 @@
 				<p class="completed-books">Finished: <span>1</span></p>
 				<p class="completed-books">Unfinished: <span>1</span></p>
 			</div>
-			<label class="dark-mode-check">
-				Dark Mode:
-				<input
-					type="checkbox"
-					class="toggle-darkmode"
-					name="completed"
-					id="completed-check"
-				/>
-				<div class="slider-switch"></div>
-			</label>
 		</header>
 		<div class="shelf">
 			<div class="book-card add-new-book" title="Add a Book">+</div>
@@ -116,9 +106,14 @@
 				</div>
 			</form>
 		</div>
+		<div class="working-info hint">
+			Hover over the cover images (tap if on mobile) to view details
+		</div>
 		<footer>
 			Designed and developed by
-			<a target="_blank" href="https:berserkwal.github.io">berserkwal</a>
+			<a target="_blank" class="button" href="https:berserkwal.github.io"
+				>berserkwal</a
+			>
 		</footer>
 		<script src="./Scripts/main.js"></script>
 	</body>
