Update index.html to remove old github username

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 		</div>
 		<footer>
 			Designed and developed by
-			<a target="_blank" class="button" href="https:berserkwal.github.io"
-				>berserkwal</a
+			<a target="_blank" class="button" href="/"
+				>Vikas Kharkwal</a
 			>
 		</footer>
 		<script src="./Scripts/main.js"></script>
